[workspace]
resolver = "2"
members = [
  "integration/sheepdog",
  "integration/ducks",
  "lading",
  "lading_capture",
  "lading_payload",
  "lading_throttle",
]

[workspace.dependencies]
bytes = { version = "1.10", default-features = false, features = ["std"] }
byte-unit = { version = "5.1", default-features = false, features = ["serde", "byte"] }
metrics = { version = "0.23" }
metrics-util = { version = "0.17" }
metrics-exporter-prometheus = { version = "0.15", default-features = false, features = [
  "http-listener",
  "uds-listener",
] }
prost = "0.13"
rand = { version = "0.9", default-features = false }
rustc-hash = { version = "1.1" }
serde = { version = "1.0", features = ["std", "derive"] }
serde_json = { version = "1.0", features = ["std"] }
thiserror = { version = "2.0" }
tokio = { version = "1.46" }
# If you update tonic, search for tonic-build in sub-crates and update their
# version.
tonic = { version = "0.13", default-features = false, features = ["server", "transport", "router", "codegen", "prost"] }
tower = { version = "0.5", default-features = false }
tracing = { version = "0.1" }
uuid = { version = "1.17", default-features = false, features = [
  "v4",
  "serde",
] }
once_cell = { version = "1.21" }
proptest = { version = "1.7" }
proptest-derive = { version = "0.6" }

http = { version = "1.3" }
http-body-util = { version = "0.1" }
http-serde = { version = "2.1" }
hyper = { version = "1.6", default-features = false }
hyper-util = { version = "0.1", default-features = false }

[profile.release]
lto = true        # Optimize our binary at link stage.
codegen-units = 1 # Increases compile time but improves optimization alternatives.
opt-level = 3     # Optimize with 'all' optimization flipped on. May produce larger binaries than 's' or 'z'.
panic = "abort"
debug = false

[profile.dev]
panic = "abort"
