[package]
name = "blackhole"
version = "0.4.2"
authors = ["Brian L. Troutwine <brian@troutwine.us>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/blt/lading/udp_blackhole"
keywords = ["udp", "blackhole"]
categories = ["command-line-utilities", "development-tools::profiling"]
description = "A UDP blackhole program with some instrumentation"

[dependencies]
metrics = { version = "0.16", default-features = false, features = ["std"] }
metrics-exporter-prometheus = { version = "0.5", default-features = false, features = ["tokio-exporter"] }

[dependencies.argh]
version = "0.1"
default-features = false
features = []

[dependencies.hyper]
version = "0.14"
default-features = false
features = []

[dependencies.tokio]
version = "1.8"
default-features = false
features = ["rt", "rt-multi-thread", "macros", "fs", "io-util"]

[[bin]]
name = "udp_blackhole"

[[bin]]
name = "http_blackhole"