[package]
name = "file_gen"
readme = "README.md"
version = "0.4.1"
authors = ["Brian L. Troutwine <brian@troutwine.us>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/blt/lading/file_gen"
keywords = ["random_test", "generator"]
categories = ["command-line-utilities", "development-tools::profiling", "filesystem"]
description = "A file generating program with stable throughput."

[dependencies]
lading_common = { path = "../lading_common" }
rayon = "1.5"
toml = "0.5"

[dependencies.argh]
version = "0.1"
default-features = false
features = []

[dependencies.futures]
version = "0.3"
default-features = false
features = ["std"]

[dependencies.byte-unit]
version = "4.0"
default-features = false
features = []

[dependencies.governor]
version = "0.3"
default-features = false
features = ["std", "jitter", "quanta"]

[dependencies.tokio]
version = "1.8"
default-features = false
features = ["rt", "rt-multi-thread", "macros", "fs", "io-util"]

[dependencies.serde]
version = "1.0"
default-features = false
features = ["derive", "std"]

[dependencies.metrics]
version = "0.16"
default-features = false
features = ["std"]

[dependencies.metrics-exporter-prometheus]
version = "0.5"
default-features = false
features = ["tokio-exporter"]

[dependencies.rand]
version = "0.8"
default-features = false
features = []
