[package]
name = "lading-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.lading]
path = "../lading"

[[bin]]
name = "prometheus_parser"
path = "fuzz_targets/prometheus_parser.rs"
test = false
doc = false
bench = false
