[package]
name = "lading-observer"
version = "0.1.0"
authors = [
  "Brian L. Troutwine <brian.troutwine@datadoghq.com>",
  "George Hahn <george.hahn@datadoghq.com>",
]
edition = "2024"
license = "MIT"
repository = "https://github.com/datadog/lading/"
readme = "README.md"
keywords = ["random_test", "generator"]
categories = ["development-tools::profiling"]
description = "A tool for load testing daemons."

[dependencies]
lading-signal = { version = "0.1", path = "../lading-signal" }
metrics = "0.24"
nix = { version = "0.30", features = ["fs", "signal"] }
num-traits = { version = "0.2", default-features = false }
num_cpus = "1.17"
procfs = { version = "0.18", default-features = false, features = [] }
regex = "1.12"
rustc-hash = "2.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1.47", features = ["fs", "macros", "sync", "time"] }
tracing = "0.1"
heck = { version = "0.5", default-features = false }

[dev-dependencies]
proptest = "1.9"

[lib]
doctest = false
