[package]
name = "lading"
version = "0.25.2"
authors = [
  "Brian L. Troutwine <brian.troutwine@datadoghq.com>",
  "George Hahn <george.hahn@datadoghq.com>",
  "Scott Opell <scott.opell@datadoghq.com>",
  "Caleb Metz <caleb.metz@datadoghq.com>",
]
edition = "2021"
license = "MIT"
repository = "https://github.com/datadog/lading/"
keywords = ["random_test", "generator"]
categories = ["development-tools::profiling"]
description = "A tool for load testing daemons."

[dependencies]
lading-capture = { version = "0.2", path = "../lading_capture" }
lading-payload = { version = "0.1", path = "../lading_payload" }
lading-throttle = { version = "0.1", path = "../lading_throttle" }
lading-signal = { version = "0.1", path = "../lading_signal" }

async-compression = { version = "0.4.17", features = ["tokio", "zstd"] }
average = { version = "0.15", default-features = false, features = [] }
bollard = { version = "0.18", default-features = false, features = ["pipe", "http"] }
byte-unit = { workspace = true }
bytes = { workspace = true, features = ["std"] }
clap = { version = "4.5", default-features = false, features = [
  "std",
  "suggestions",
  "derive",
  "help",
] }
flate2 = { version = "1.0.34", default-features = false, features = [
  "rust_backend",
] }
futures = "0.3.31"
fuser = { version = "0.15", optional = true }
heck  = { version = "0.5", default-features = false }
http = { workspace = true }
http-body-util = { workspace = true }
http-serde = "2.1"
hyper = { workspace = true, features = ["client", "http1", "http2", "server"] }
hyper-util = { workspace = true, features = ["default", "client", "client-legacy"] }
is_executable = "1.0.4"
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
metrics-util = { workspace = true }
nix = { version = "0.29", default-features = false, features = [
  "process",
  "signal",
] }
num_cpus = { version = "1.16" }
once_cell = { workspace = true }
rand = { workspace = true, default-features = false, features = [
  "small_rng",
  "std",
  "std_rng",
] }
regex = { version = "1.11" }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
rustc-hash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_qs = { version = "0.13", default-features = false }
serde_yaml = { version = "0.9" }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "fs",
  "io-util",
  "process",
  "signal",
  "time",
  "net",
] }
tokio-stream = { version = "0.1", features = ["io-util"] }
tokio-util = { version = "0.7", features = ["io"] }
tonic = { version = "0.12" }
tower = { workspace = true, features = [
  "timeout",
  "limit",
  "load-shed",
] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["std", "env-filter"] }
uuid = { workspace = true }
quanta = { version = "0.12", default-features = false, features = [] }
zstd = "0.13.1"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = { version = "0.17", default-features = false, features = [] }
async-pidfd = "0.1"

[dev-dependencies]
tempfile = "3.15"
warp = "0.3"
proptest = "1.6"

[features]
default = []
logrotate_fs = ["fuser"]

[lib]
doctest = false

[[bin]]
name = "lading"
