[package]
name = "lading"
version = "0.30.0"
authors = [
  "Brian L. Troutwine <brian.troutwine@datadoghq.com>",
  "George Hahn <george.hahn@datadoghq.com>",
  "Scott Opell <scott.opell@datadoghq.com>",
  "Caleb Metz <caleb.metz@datadoghq.com>",
]
edition = "2024"
license = "MIT"
repository = "https://github.com/datadog/lading/"
keywords = ["random_test", "generator"]
categories = ["development-tools::profiling"]
description = "A tool for load testing daemons."

[dependencies]
lading-capture = { version = "0.2", path = "../lading_capture" }
lading-payload = { version = "0.1", path = "../lading_payload" }
lading-throttle = { version = "0.1", path = "../lading_throttle" }
lading-signal = { version = "0.1", path = "../lading_signal" }

anyhow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
async-compression = { version = "0.4.32", features = ["tokio", "zstd"] }
bollard = { version = "0.19", default-features = false, features = ["pipe", "http"] }
parquet = { workspace = true, features = ["arrow"] }
byte-unit = { workspace = true, features = ["std"] }
bytes = { workspace = true, features = ["std"] }
clap = { version = "4.5", default-features = false, features = [
  "std",
  "suggestions",
  "derive",
  "help",
] }
either = "1.15.0"
flate2 = { version = "1.1.2", default-features = false, features = [
  "rust_backend",
] }
futures = "0.3.31"
fuser = { version = "0.16", optional = true, features = ["libfuse"] }
heck  = { version = "0.5", default-features = false }
http = { workspace = true }
http-body-util = { workspace = true }
http-serde = "2.1"
hyper = { workspace = true, features = ["client", "http1", "http2", "server"] }
hyper-util = { workspace = true, features = ["default", "client", "client-legacy"] }
kube = { version = "2.0.1", default-features = false, features = ["config", "client", "rustls-tls", "ring"] }
kube-core = "2.0.0"
k8s-openapi = { version = "0.26.0", default-features = false, features = ["latest"] }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
metrics-util = { workspace = true }
nix = { version = "0.30", default-features = false, features = [
  "fs",
  "process",
  "signal",
] }
num_cpus = { version = "1.17" }
num-traits = { version = "0.2", default-features = false }
once_cell = { workspace = true }
opentelemetry-proto = { workspace = true }
prost = { workspace = true }
rand = { workspace = true, default-features = false, features = [
  "small_rng",
  "std",
  "std_rng",
  "thread_rng",
] }
regex = { version = "1.12" }
reqwest = { version = "0.12", default-features = false, features = ["json", "default-tls"] }
rustc-hash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_qs = { version = "0.15", default-features = false }
serde_yaml = { version = "0.9" }
sha2 = { workspace = true, features = ["std"] }
sysinfo = { workspace = true, features = ["system"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "fs",
  "io-util",
  "process",
  "signal",
  "time",
  "net",
] }
tokio-stream = { version = "0.1", features = ["io-util"] }
tokio-util = { version = "0.7", features = ["io"] }
tonic = { workspace = true }
tonic-prost = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["std", "env-filter"] }
zstd = "0.13.3"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = { version = "0.18", default-features = false, features = [] }
async-pidfd = "0.1"

[dev-dependencies]
tempfile = "3.23"
proptest = { workspace = true }
tower-test = "0.4"

[build-dependencies]
prost-build = { workspace = true }
tonic-prost-build = { workspace = true }

[features]
default = []
logrotate_fs = ["fuser"]

[lib]
doctest = false

[[bin]]
name = "lading"

[lints]
workspace = true
