[package]
name = "lading"
version = "0.30.0"
authors = [
  "Brian L. Troutwine <brian.troutwine@datadoghq.com>",
  "George Hahn <george.hahn@datadoghq.com>",
  "Scott Opell <scott.opell@datadoghq.com>",
  "Caleb Metz <caleb.metz@datadoghq.com>",
  "Paul Reinlein <paul.reinlein@datadoghq.com>",
]
edition = "2024"
license = "MIT"
repository = "https://github.com/datadog/lading/"
keywords = ["random_test", "generator"]
categories = ["development-tools::profiling"]
description = "A tool for load testing daemons."

[dependencies]
lading-capture = { version = "0.2", path = "../lading_capture" }
lading-capture-schema = { path = "../lading_capture_schema" }
lading-payload = { version = "0.1", path = "../lading_payload" }
lading-observer = { version = "0.1", path = "../lading_observer" }
lading-throttle = { version = "0.1", path = "../lading_throttle" }
lading-signal = { version = "0.1", path = "../lading_signal" }

anyhow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
async-compression = { version = "0.4.36", features = ["tokio", "zstd"] }
bollard = { version = "0.19" }
parquet = { workspace = true, features = ["arrow"] }
byte-unit = { workspace = true, features = ["std"] }
bytes = { workspace = true, features = ["std"] }
clap = { version = "4.5", default-features = false, features = [
  "derive",
  "help",
  "std",
  "suggestions",
] }
either = { version = "1.15.0" }
flate2 = { version = "1.1.2" }
futures = { version = "0.3.31" }
fuser = { version = "0.16", optional = true, features = ["libfuse"] }
http = { workspace = true }
http-body-util = { workspace = true }
http-serde = { version = "2.1" }
hyper = { workspace = true, features = ["client", "http1", "http2", "server"] }
hyper-util = { workspace = true, features = ["client-legacy"] }
kube = { version = "2.0.1" }
kube-core = { version = "2.0.0" }
k8s-openapi = { version = "0.26.0", default-features = false, features = [
  "latest",
] }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
metrics-util = { workspace = true }
nix = { workspace = true, features = ["fs", "signal"] }
num_cpus = { version = "1.17" }
once_cell = { workspace = true }
opentelemetry-proto = { workspace = true }
prost = { workspace = true }
rand = { workspace = true, features = ["small_rng", "thread_rng"] }
regex = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = [
  "default-tls",
  "json",
] }
rustc-hash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_qs = { version = "0.15", default-features = false }
serde_yaml = { version = "0.9" }
sha2 = { workspace = true, features = ["std"] }
sysinfo = { workspace = true, features = ["system"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "process",
  "rt-multi-thread",
  "signal",
  "time",
] }
tokio-stream = { workspace = true, features = ["io-util"] }
tokio-util = { version = "0.7", features = ["io"] }
tonic = { workspace = true, features = [
  "transport",
  "router",
] }
tonic-prost = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
zstd = { version = "0.13.3" }

[target.'cfg(target_os = "linux")'.dependencies]
async-pidfd = { version = "0.1" }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
tower-test = { version = "0.4" }

[build-dependencies]
prost-build = { workspace = true }
tonic-prost-build = { workspace = true }

[features]
default = []
logrotate_fs = ["fuser"]

[lib]
doctest = false

[[bin]]
name = "lading"

[lints]
workspace = true
