[package]
name = "lading-capture"
version = "0.2.0"
authors = [
  "Brian L. Troutwine <brian.troutwine@datadoghq.com>",
  "George Hahn <george.hahn@datadoghq.com",
]
edition = "2024"
license = "MIT"
repository = "https://github.com/datadog/lading/"
keywords = ["random_test", "generator"]
categories = ["development-tools::profiling"]
description = "A tool for load testing daemons."

[dependencies]
lading-signal = { version = "0.1", path = "../lading_signal" }

rustc-hash = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }
metrics = { workspace = true }
quanta = { version = "0.12", default-features = false, features = [] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs", "macros"] }
thiserror = { workspace = true }
metrics-util = { workspace = true }
tracing = { workspace = true }
ustr = { workspace = true }

[lib]
doctest = false

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
