[package]
name = "lading-capture"
version = "0.2.0"
authors = [
  "Brian L. Troutwine <brian.troutwine@datadoghq.com>",
  "George Hahn <george.hahn@datadoghq.com",
]
edition = "2021"
license = "MIT"
repository = "https://github.com/datadog/lading/"
keywords = ["random_test", "generator"]
categories = ["development-tools::profiling"]
description = "A tool for load testing daemons."

[dependencies]
lading-signal = { version = "0.1", path = "../lading-signal" }
lading-capture-schema = { path = "../lading_capture_schema" }

arc-swap = { workspace = true }
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-buffer = { workspace = true }
arrow-schema = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }
metrics = { workspace = true }
parquet = { workspace = true, features = ["arrow", "zstd"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs", "macros", "test-util"] }
thiserror = { workspace = true }
metrics-util = { workspace = true }
tracing = { workspace = true }
ustr = { workspace = true }
ddsketch-agent = { workspace = true }
datadog-protos = { workspace = true }
protobuf = { workspace = true }

[lib]
doctest = false

[dev-dependencies]
approx = { workspace = true }
bytes = { workspace = true }
proptest = { workspace = true }
rand = { workspace = true }
tempfile = { workspace = true }

[features]
fuzz = ["dep:arbitrary", "dep:lading-fuzz", "dep:rand", "dep:anyhow"]

[dependencies.arbitrary]
version = "1"
features = ["derive"]
optional = true

[dependencies.lading-fuzz]
path = "../lading_fuzz"
optional = true

[dependencies.rand]
version = "0.9"
default-features = false
features = ["small_rng", "std"]
optional = true

[dependencies.anyhow]
workspace = true
optional = true

[[bin]]
name = "fuzz_capture_harness"
path = "src/bin/fuzz_capture_harness.rs"
required-features = ["fuzz"]

[lints]
workspace = true
