[package]
name = "lading_common"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytecount = "0.6"

[dependencies.metrics]
version = "0.16"
default-features = false
features = ["std"]

[dependencies.rand]
version = "0.8"
default-features = false
features = []

[dependencies.arbitrary]
version = "1"
default-features = false
features = ["derive"]

[dependencies.serde]
version = "1.0"
default-features = false
features = ["derive", "std"]

[dependencies.serde_json]
version = "1.0"
default-features = false
features = ["std"]
