[package]
name = "lading_common"
version = "0.4.0"
authors = ["Brian L. Troutwine <brian@troutwine.us>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/blt/lading/lading_common"
keywords = ["random_test", "generator"]
categories = ["development-tools::testing"]
description = "A set of code for data generation and blocking."

[dependencies]
bytecount = "0.6"

[dependencies.metrics]
version = "0.16"
default-features = false
features = ["std"]

[dependencies.arbitrary]
version = "1"
default-features = false
features = ["derive"]

[dependencies.serde]
version = "1.0"
default-features = true
features = ["derive", "std"]

[dependencies.serde_json]
version = "1.0"
default-features = false
features = ["std"]

[dependencies.rand]
version = "0.8"
default-features = false
features = ["small_rng", "std", "std_rng"]

[dev-dependencies]
quickcheck = "1"