[package]
name = "lading_common"
version = "0.4.5"
authors = ["Brian L. Troutwine <brian@troutwine.us>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/blt/lading/"
keywords = ["random_test", "generator"]
categories = ["development-tools::testing"]
description = "A set of code for data generation and blocking."

[dependencies]
bytecount = "0.6"
chrono = "0.4"

[dependencies.metrics]
version = "0.17"
default-features = false
features = ["std"]

[dependencies.arbitrary]
version = "1"
default-features = false
features = ["derive"]

[dependencies.rmp-serde]
version = "0.15"
default-features = false

[dependencies.serde]
version = "1.0"
default-features = true
features = ["derive", "std"]

[dependencies.serde_tuple]
version = "0.5"
default-features = false

[dependencies.serde_json]
version = "1.0"
default-features = false
features = ["std"]

[dependencies.rand]
version = "0.8"
default-features = false
features = ["small_rng", "std", "std_rng"]

[dev-dependencies]
quickcheck = "1"