[package]
name = "lading-payload"
version = "0.1.0"
authors = ["Brian L. Troutwine <brian.troutwine@datadoghq.com>", "George Hahn <george.hahn@datadoghq.com"]
edition = "2021"
license = "MIT"
repository = "https://github.com/datadog/lading/"
keywords = ["random_test", "generator"]
categories = ["development-tools::profiling"]
description = "A tool for load testing daemons."

[dependencies]
rand = { workspace = true, default-features = false, features = ["small_rng", "std", "std_rng" ]}
serde = { workspace = true }
serde_json = {workspace = true }
opentelemetry-proto = { version = "0.1.0", features = ["traces", "metrics", "logs", "gen-tonic" ] }
thiserror = { workspace = true }
tracing = { workspace = true }
serde_tuple = { version = "0.5", default-features = false }
rmp-serde = { version = "1.1", default-features = false }
prost = { workspace = true }
time = { version = "0.3", features = ["formatting"] }

[dev-dependencies]
proptest = "1.2"
proptest-derive = "0.3.0"

[lib]
doctest = false
